--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
 <!doctype html>
-<html lang="en">
+<html lang="ro">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    
+    <title>Consultanța Afaceri Moldova | Granturi și Finanțări pentru Antreprenori</title>
+    <meta name="description" content="Consultanță profesională pentru accesarea granturilor și finanțărilor nerambursabile în Republica Moldova. Peste 250 de proiecte finanțate, 8 ani experiență, 95% rată de succes." />
+    <meta name="author" content="Consultanța Afaceri" />
+    <meta name="keywords" content="granturi Moldova, finanțări nerambursabile, consultanță afaceri, IMM Moldova, antreprenori, fonduri europene, startup Moldova" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://consultantaafaceri.md" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://consultantaafaceri.md" />
+    <meta property="og:title" content="Consultanța Afaceri Moldova | Granturi și Finanțări" />
+    <meta property="og:description" content="Consultanță profesională pentru accesarea granturilor și finanțărilor nerambursabile. Peste 250 de proiecte finanțate cu succes." />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:locale" content="ro_MD" />
+    <meta property="og:site_name" content="Consultanța Afaceri" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:url" content="https://consultantaafaceri.md" />
+    <meta name="twitter:title" content="Consultanța Afaceri Moldova | Granturi și Finanțări" />
+    <meta name="twitter:description" content="Consultanță profesională pentru accesarea granturilor și finanțărilor nerambursabile. Peste 250 de proiecte finanțate cu succes." />
+    <meta name="twitter:image" content="/og-image.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#1e3a5f" />
   </head>
 
   <body>
